well, i almost done it, i just have to fix some bugs: after 2 times denying of permission the screen is going to blink, but i'll handle it later. I also remembered that i use READ_MEDIA_IMAGES and it won't work with old versions of sdk

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
+        android:label=""
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Graphiceditor"
@@ -22,7 +22,7 @@
 
         <provider
             android:name="androidx.core.content.FileProvider"
-            android:authorities="@strings/authorities"
+            android:authorities="com.hits.graphic-editor"
             android:exported="false"
             android:grantUriPermissions="true">
             <meta-data
